fix: corrigindo os services